--- a/metadata.yaml
+++ b/metadata.yaml
@@ -62,5 +62,6 @@ subjects:
 - !lcsh 'Good and evil -- Juvenile fiction'
 - !lcsh 'Slaves -- Juvenile fiction'
 - !lcsh 'Oz (Imaginary place) -- Juvenile fiction'
+- GITenberg
 title: Rinkitink in Oz
 url: http://www.gutenberg.org/ebooks/25581
